// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor target: should allow _blank if using HTML 1`] = `"<p><a href=\\"https://example.com\\" target=\\"_blank\\" title=\\"\\">test</a></p>"`;

exports[`anchor target: should default to _self 1`] = `"<p><a href=\\"https://example.com\\" target=\\"_self\\" title=\\"\\">test</a></p>"`;

exports[`anchors 1`] = `
"<p><a href=\\"http://example.com\\" target=\\"_self\\" title=\\"\\">link</a><br>
<a href=\\"\\" target=\\"_self\\" title=\\"\\">xss</a><br>
<a href=\\"/docs/slug\\" target=\\"_self\\" title=\\"\\" class=\\"doc-link\\" data-sidebar=\\"slug\\">doc</a><br>
<a href=\\"/reference-link/slug\\" target=\\"_self\\" title=\\"\\">ref</a><br>
<a href=\\"/changelog/slug\\" target=\\"_self\\" title=\\"\\">blog</a><br>
<a href=\\"/changelog/slug\\" target=\\"_self\\" title=\\"\\">changelog</a><br>
<a href=\\"/page/slug\\" target=\\"_self\\" title=\\"\\">page</a></p>"
`;

exports[`anchors with baseUrl 1`] = `
"<p><a href=\\"doc:slug\\">doc</a><br>
<a href=\\"ref:slug\\">ref</a><br>
<a href=\\"blog:slug\\">blog</a><br>
<a href=\\"changelog:slug\\">changelog</a><br>
<a href=\\"page:slug\\">page</a></p>"
`;

exports[`check list items 1`] = `
"<ul class=\\"contains-task-list\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled=\\"\\"> checklistitem1</li>
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled=\\"\\" checked=\\"\\"> checklistitem1</li>
</ul>"
`;

exports[`emojis 1`] = `
"<p><img src=\\"/img/emojis/joy.png\\" alt=\\":joy:\\" title=\\":joy:\\" class=\\"emoji\\" align=\\"absmiddle\\" height=\\"20\\" width=\\"20\\" caption=\\"\\" loading=\\"lazy\\"><br>
<i class=\\"fa fa-lock\\"></i><br>
:unknown-emoji:</p>"
`;

exports[`export multiple Markdown renderers allows complex compact headings 1`] = `
"<h1>Basic Text</h1>
<h2>🙀 oh noes!</h2>
<h3><strong>6</strong>. Oh No</h3>
<p>Lorem ipsum dolor!</p>"
`;

exports[`export multiple Markdown renderers renders AST 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Hello World",
        },
      ],
      "depth": 1,
      "type": "heading",
    },
    Object {
      "align": Array [
        "center",
        "center",
        "center",
      ],
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Col. A",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Col. B",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Col. C",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell A1",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell B1",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell C1",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell A2",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell B2",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell C2",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell A3",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell B3",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Cell C3",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "  ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Embed Title",
            },
          ],
          "title": "@embed",
          "type": "link",
          "url": "https://jsfiddle.net/rafegoldberg/5VA5j/",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "❗️ UhOh",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "root",
}
`;

exports[`export multiple Markdown renderers renders HTML 1`] = `
"<h1>Hello World</h1>

























<table><thead><tr><th align=\\"center\\">Col. A</th><th align=\\"center\\">Col. B</th><th align=\\"center\\">Col. C</th></tr></thead><tbody><tr><td align=\\"center\\">Cell A1</td><td align=\\"center\\">Cell B1</td><td align=\\"center\\">Cell C1</td></tr><tr><td align=\\"center\\">Cell A2</td><td align=\\"center\\">Cell B2</td><td align=\\"center\\">Cell C2</td></tr><tr><td align=\\"center\\">Cell A3</td><td align=\\"center\\">Cell B3</td><td align=\\"center\\">Cell C3</td></tr></tbody></table>
<p>  <a href=\\"https://jsfiddle.net/rafegoldberg/5VA5j/\\" title=\\"@embed\\">Embed Title</a></p>
<blockquote>
<p>❗️ UhOh</p>
<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
</blockquote>"
`;

exports[`export multiple Markdown renderers renders MD 1`] = `
"Hello World
===========
"
`;

exports[`export multiple Markdown renderers renders custom React components 1`] = `
<React.Fragment>
  <Unknown>
    Hello World
  </Unknown>
  


























  <Table>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. A
        </th>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. B
        </th>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. C
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A1
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B1
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C1
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A2
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B2
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C2
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A3
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B3
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C3
        </td>
      </tr>
    </tbody>
  </Table>
  

  <p>
      
    <AnchorContext
      href="https://jsfiddle.net/rafegoldberg/5VA5j/"
      title="@embed"
    >
      Embed Title
    </AnchorContext>
  </p>
  

  <blockquote>
    

    <p>
      ❗️ UhOh
    </p>
    

    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
    

  </blockquote>
</React.Fragment>
`;

exports[`export multiple Markdown renderers renders plain markdown as React 1`] = `
<React.Fragment>
  <h1>
    Hello World
  </h1>
  


























  <table>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. A
        </th>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. B
        </th>
        <th
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Col. C
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A1
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B1
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C1
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A2
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B2
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C2
        </td>
      </tr>
      <tr>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell A3
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell B3
        </td>
        <td
          style={
            Object {
              "textAlign": "center",
            }
          }
        >
          Cell C3
        </td>
      </tr>
    </tbody>
  </table>
  

  <p>
      
    <a
      href="https://jsfiddle.net/rafegoldberg/5VA5j/"
      title="@embed"
    >
      Embed Title
    </a>
  </p>
  

  <blockquote>
    

    <p>
      ❗️ UhOh
    </p>
    

    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
    

  </blockquote>
</React.Fragment>
`;

exports[`image 1`] = `"<p><img src=\\"http://example.com/image.png\\" alt=\\"Image\\" align=\\"\\" caption=\\"\\" height=\\"auto\\" title=\\"\\" width=\\"auto\\" loading=\\"lazy\\"></p>"`;

exports[`list items 1`] = `
"<ul>
<li>listitem1</li>
</ul>"
`;

exports[`magic image 1`] = `"<figure><img src=\\"https://files.readme.io/6f52e22-man-eating-pizza-and-making-an-ok-gesture.jpg\\" title=\\"man-eating-pizza-and-making-an-ok-gesture.jpg\\" align=\\"\\" alt=\\"\\" caption=\\"\\" height=\\"auto\\" width=\\"auto\\" loading=\\"lazy\\"><figcaption><p>A guy. Eating pizza. And making an OK gesture.</p></figcaption></figure>"`;

exports[`tables 1`] = `"<div class=\\"rdmd-table\\"><div class=\\"rdmd-table-inner\\"><table><thead><tr><th>Tables</th><th style=\\"text-align: center;\\">Are</th><th style=\\"text-align: right;\\">Cool</th></tr></thead><tbody><tr><td>col 3 is</td><td style=\\"text-align: center;\\">right-aligned</td><td style=\\"text-align: right;\\">$1600</td></tr><tr><td>col 2 is</td><td style=\\"text-align: center;\\">centered</td><td style=\\"text-align: right;\\">$12</td></tr><tr><td>zebra stripes</td><td style=\\"text-align: center;\\">are neat</td><td style=\\"text-align: right;\\">$1</td></tr></tbody></table></div></div>"`;
